Fix alignment of year label on usage
It got pushed down too far when we added the switch service bar in
https://github.com/alphagov/notifications-admin/pull/1029

This commit fixes it so that the text aligns with the baseline of the
`<h1>`.

--- a/app/assets/stylesheets/_grids.scss
+++ b/app/assets/stylesheets/_grids.scss
@@ -53,7 +53,7 @@
 
 .align-with-heading-copy {
   display: block;
-  margin-top: 45px;
+  margin-top: 25px;
 }
 
 .align-with-heading-copy-right {
